--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.19.4",
     "react": "^16.0.0",
+    "react-big-calendar": "^0.16.1",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.14",
+    "recharts": "^1.0.0-alpha.6"
   },
   "scripts": {
     "start": "react-scripts start",
