--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,8 @@ default: &default
 development:
   <<: *default
   database: yaft_development
-  port: 5432
+  port: <% ENV['DB_PORT'] %>
+  hostname: 'localhost'
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -59,7 +60,8 @@ development:
 test:
   <<: *default
   database: yaft_test
-  port: 5433
+  port: <% ENV['DB_PORT'] %>
+  hostname: 'localhost'
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
