--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.7.0",
+    "chartjs-plugin-annotation": "^0.5.7",
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
     "react-big-calendar": "^0.16.1",
